# ChangeLog for www-client/chromium
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1200 2015/02/18 09:22:47 phajdan.jr Exp $

*chromium-42.0.2305.3 (18 Feb 2015)

  18 Feb 2015; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-42.0.2288.6.ebuild, +chromium-42.0.2305.3.ebuild:
  Dev channel bump. Remove old.

  15 Feb 2015; Agostino Sarubbo <ago@gentoo.org> chromium-40.0.2214.111.ebuild:
  Stable for x86, wrt bug #539094

*chromium-42.0.2292.0 (09 Feb 2015)

  09 Feb 2015; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +chromium-42.0.2292.0.ebuild:
  Dev channel bump.

  09 Feb 2015; Jason A. Donenfeld <zx2c4@gentoo.org>
  chromium-40.0.2214.111.ebuild, chromium-40.0.2214.91.ebuild,
  chromium-40.0.2214.93.ebuild, chromium-41.0.2272.12-r1.ebuild,
  chromium-41.0.2272.16.ebuild, chromium-41.0.2272.35.ebuild,
  chromium-42.0.2288.6.ebuild, metadata.xml:
  Unbreak repoman

  09 Feb 2015; Mike Gilbert <floppym@gentoo.org> chromium-40.0.2214.111.ebuild,
  chromium-40.0.2214.91.ebuild, chromium-40.0.2214.93.ebuild,
  chromium-41.0.2272.12-r1.ebuild, chromium-41.0.2272.16.ebuild,
  chromium-41.0.2272.35.ebuild, chromium-42.0.2288.6.ebuild, metadata.xml:
  Revert widevine changes, which broke repoman

  08 Feb 2015; Jason A. Donenfeld <zx2c4@gentoo.org>
  +files/chromium-widevine.patch, chromium-40.0.2214.111.ebuild,
  chromium-40.0.2214.91.ebuild, chromium-40.0.2214.93.ebuild,
  chromium-41.0.2272.12-r1.ebuild, chromium-41.0.2272.16.ebuild,
  chromium-41.0.2272.35.ebuild, chromium-42.0.2288.6.ebuild, metadata.xml:
  Support widevine

  08 Feb 2015; Richard Freeman <rich0@gentoo.org>
  chromium-40.0.2214.111.ebuild:
  amd64 stable - 539094

*chromium-40.0.2214.111 (07 Feb 2015)

  07 Feb 2015; Mike Gilbert <floppym@gentoo.org> +chromium-40.0.2214.111.ebuild:
  Stable channel bump.

*chromium-41.0.2272.35 (05 Feb 2015)
