@@ -27,25 +27,25 @@ EBUILD chromium-41.0.2272.12-r1.ebuild 20149 SHA256 06bccb824cb5857ececade7be1f4
 EBUILD chromium-41.0.2272.16.ebuild 20146 SHA256 a519e26a6a8e86eaf442595fd68df312b4708aa99d11d2cd5cceb99355793a39 SHA512 c008987c884800ec34f609d36464be6394cd9b0b346535d1d50a84c474d1ba01656870b9ca9b1e03f10df454c247c3b96f1b760d924b0a5fcbe50ce5f98e71e7 WHIRLPOOL 29bfcb5bca03cd9dbbef0257c4e3822d91cb13aa957267f50152b14268ba001ca24a0a3c129535c9f1947ecd1e9b1901a14322417771b073eab9e79d21097ad6
 EBUILD chromium-41.0.2272.35.ebuild 20146 SHA256 513a82dd6127bbdb38d60f4ae6f76a86552a998f2d150de2d0a4b0ea71fec551 SHA512 ede2d3a2572cd23e11003488ca80ab932d07a4055a8d1e7c2f8438907764e44dbcb32ffdaebcb97fcecc0d1fe9fda3bb95b93e1e3d12c17f01e89e7ffa74ac50 WHIRLPOOL 2b7990a640e3f2beb43dbbe370b69cbf2a776cb2955eab93d82cc3ba0941d4245e46b8918aaa06adf802e8c6daa75a53a5dba404dc820feafbe816894b63ef16
 EBUILD chromium-42.0.2292.0.ebuild 20196 SHA256 1f2a988a0b2ed8cc0fa1de2869281dd94b4eeb77865d33aa45154e07e612e29c SHA512 e1055f0161db5f4a6335f2b4469e541c1bae3addd7eb75a5b39e9491f8fe508b5ee72048944655cb689bd429c2ec65f97ee1e4858d1742a26a771dc5c68d27af WHIRLPOOL 37522bd738b315b43159c8f019c7393f3e729c620b5f8f7e2847b02410fb0cf096b50f568cb13b77523d0b4410a37198cce64888f8664a2aaf69d5864fb5e9cd
-EBUILD chromium-42.0.2305.3.ebuild 20038 SHA256 e121f66d64d63c7e767e07514d8edaf9337ff001b7212b495b9aa133e00f4cc9 SHA512 19dbd711c9f470054195a22ab019c16283df1f9974f37f7370ddfe0a43d1b94025dcb1e33af8329b1744a9e63716d1d10a86f0c9f0691dbdd9d3a2e39218de4b WHIRLPOOL 575ec8f137b515db48a5966561f15e3e53d837bc72f5ff96c48a222948d95bb09bccd87acb72f6cae96d8bc28e28f4689827798e133e87848116d7db4c44ad04
-MISC ChangeLog 5004 SHA256 1841c453c78b58ba5d818b1dee55978c41fdbcd0682574368ed8eb7d9782b5a8 SHA512 ab177119bef8330be5de77eb05d1e6ea8f9b1fbc735d1bca9f18841e337a5d473c2bccec9a974f071163d96e0948305d6d9f50153d9415979e14af88d3ec4e7b WHIRLPOOL 4ee63833211b0d1296881ffc2c671c168606bef60110b9ca79d4d7abae110501404042095a6e9ccd042d2cc2109bb3888dafb4978572bd2dc711a570568b86e4
+EBUILD chromium-42.0.2305.3.ebuild 20153 SHA256 a88f3b06b748e88e39992949fa243927b212df6dcea93bb4d548b2807a6840a9 SHA512 3d9545d982c98aa4ab95fc8d5622e0d6f6bde3c3daee4f9a97f8524390c9a0f5fbefdbcc8a40ed1a635be9921305e27d5995d7384465a89a55511b1d8ab0dce7 WHIRLPOOL 14443992c932472da9f5c990b85e5f4d19b0dcbc02ff276268bab269933e389f9987c4a952a25f198961d4ddafbfbab6004c2e3284fdc92ce5a8388543491d14
+MISC ChangeLog 5149 SHA256 51d677785256bc3ceb8f8071dd325d2e36a95fad68c4c1ce011c836bc8909538 SHA512 b9467147177a610083ae832a167a4659e5720a45d2a62e8393c00a2ddc1457bd8c19d392eae41e64147d9cca8b9898645b2dfcd7496974b1e7f5c4b7d5951f4b WHIRLPOOL 11af874db1d6cd2e9f8698e7aeb57474ad2e5539d775c822dcdc947a0f04eba396eaabfc140cd39845412db64194695d3948bba28c5ee6a26136b476afecbe89
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC ChangeLog-2014 123105 SHA256 f67108708d3d21b4acfca327aca42ceb4cc31201772dff496babfacb50acc4eb SHA512 bf6464e7e6ccdee81a4c26949176ebfb705f99e85a0120eea77f52b862fa3b8142abb006462f31e5a9053777836d4d9fdb69926d2b01b49463553740aecdbc43 WHIRLPOOL 114181b4c8e700a56bdf76b4de2e94998436b1b27df9182348ab88afd352085938686359369ffa4af929936e9ad88305efc97e22afd3b4c50b0dcf9669286fea
 MISC metadata.xml 711 SHA256 1e18c739e77946b63028931cb8b11f10deb618965e33cff6f653607f7464983d SHA512 284d32a4db3451ffd522fd6db99cdd7d4130fe186a7a5b746d238f3d7d6677f0a49613cc95b52bad2d26f02877b0b8668a5eaf6f98c8e56a8967b045c23fd77b WHIRLPOOL f035f1168195c7858659ee32e33d4f1aaecf6e761ae756291c2dbcf8deddac6ffafab6b1c8d984eeb4b08efd28a36a0acdf9294918141328f6d68313f3fa2235
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU5Fn0AAoJEE8aJVXqcZkdejwP/1UhPYFlIsfjovnL9GwiLFNL
-IkIxnP/uocePpoF0g1I0+RKKaq9zYNVTlFvlAlk0dFN38/rWUD/0m/v6eq85peTR
-dq611eoiZB78I8SFuxnUK8yPfwBweOehDepwwzc7VkW1OOfsatr3ME9/1w5VTI/+
-hJBGuVS3SueJ8lqWiflO0Ywf7+MaS8Mi/0n2mo07D6SPLPnX3TQkbtJKRkHo7t64
-Cy58CsQ24fvu7zfUi47GteSMi2o7ZpPTMlKeUfGTL/L5CYZjBsVlsdp4J29Asx1z
-ic8VjWLbzY6zs8DsQIQuImlxoEnXANFNH/G2qRwvhdYyiEMOXavBWzDQGgezXU40
-XsBAX69d7rF1Bpkh3vdULvkfLCbL+MY6n0ArsnnWKKHcK4UTueJKLtLvUWZKCQTK
-iUa4AtFEHh7cve1Rackg+kNUJOC2e6eh4r8RUHCpeobs0s1dTBo1TEPXg2Qj9ky/
-iI6vn3bpZVJrCcdo5qB7MiMjBG9F23xcdKoUoV+GUuIZ8Z1mf23eVLVbU0fy6gEq
-V+f+KAkUpldCue5WGlSpfZTv9dVF0JNcSDgKHm+R1yN77tY4vRb/QPN3iGC+mWYf
-KCFy+qnvfE5IlLdmirqzYe4zX4ZoGkNdE+7y1BckQ0gCpEyfBCu/8A220oHxbspP
-f/tHNFXdXMRQBCHccR1u
-=9E2I
+iQIcBAEBCAAGBQJU5cd+AAoJEE8aJVXqcZkdihYP/3Kwf3TiKD+KTXTv7dzVuQL+
+Q7Thqstr72dkSGImYOaD/YwrZBTlPdDYoHivbo0nbLZlExU3R9jnihG5/4L2TEzl
+f99B1eIMUdBFGR4Da6JAPPGPnI/A2N1tov7eUr8xI5P2dC8kVxm6VKueJ+RJCW1n
+PU+P7bDbBWE1tYsDn7pCzl9DFOPiQ7SdIwQOwbJoAC1CY5ET6UDhkIgZHvy7QPIw
+AFtklVVJrmIxWJegvOYRClT/M0cZuuQByRfz8yTgpHUNFTdET2oqeRGEx4eNZM8+
+8JAFG/fcNQkPDw33VJSy5R0wp8fwMfA6Jp1CPX9iLro0syzV7h52uWdmg0BsMD+1
+nNEAZ2/lJyIlID0AB5ahuTPrOG3TwwMi/p7dG7pS4DijdQNfNbcwYUJyGvVroxDi
+A1g1laHJJ8gv+xLKr0Slden784ELcbAYXBG+vFajOeenvC6TbmtIePzv1papOw+V
+ZCYYTB5LrZnNcG0mcY8sxyxj/rlYKKe/Jsr3rVAQgIXKXCoFKoHHbOGcLu46VPL6
+Qi0eaHawFyyZUHJxrcRcZ7wtDA8/XZ+XgpDzcNDZj66QERHjO+Z5V6Y3ciIiLPRQ
+JZPVRH+u0tGc67LFPByx/ATaaIqYV/dDSOohc/wuX4KjE0G7M1T7h2IQ7wWle8bG
+vqRKJuguXFd3psnKYGNt
+=7W1X
 -----END PGP SIGNATURE-----
