@@ -1,6 +1,10 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1200 2015/02/18 09:22:47 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1201 2015/02/19 11:22:31 phajdan.jr Exp $
+
+  19 Feb 2015; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  chromium-42.0.2305.3.ebuild:
+  Fix build with clang, bug #502456 by andrey.kudryavtsev
 
 *chromium-42.0.2305.3 (18 Feb 2015)
 
